[package]
name = "big-blocker"
version = "0.1.0"
authors = ["Julian lazaras <divinusdracodominus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
tokio = {features = ["full"]}
err-derive = "*"
structopt = "*"
